Update 3.05 Assess and mitigate the vulnerabilities of security architectures, designs and solution elements.md

--- a/DOMAIN3: Security Architecture and Engineering/3.05 Assess and mitigate the vulnerabilities of security architectures, designs and solution elements.md
+++ b/DOMAIN3: Security Architecture and Engineering/3.05 Assess and mitigate the vulnerabilities of security architectures, designs and solution elements.md
@@ -332,3 +332,124 @@ When everyone uses the same “admin” login, there’s no way to know who did 
 </details>
 
 ---
+
+## 3.5.4 Cryptographic Systems ##
+
+Cryptographic systems are essential for securing data, ensuring confidentiality, integrity, and authenticity. However, they are not foolproof. Weaknesses in cryptographic systems generally fall into three major categories: algorithm and protocol weaknesses, implementation weaknesses, and key management vulnerabilities. Each of these can be exploited by attackers if not properly managed.
+
+**1. Algorithm and Protocol Weaknesses**
+A. Outdated or Weak Algorithms
+Not all encryption algorithms are secure forever. Advances in computing power, especially with quantum computing on the horizon, make some algorithms obsolete. Examples of weak or broken algorithms include:
+
+- DES (Data Encryption Standard) – Once a widely used encryption standard, DES now has a small key size (56 bits), making it vulnerable to brute-force attacks.
+- MD5 (Message Digest Algorithm 5) – This hashing algorithm is vulnerable to collision attacks, where two different inputs produce the same hash. Attackers can use this to forge digital signatures.
+- SHA-1 (Secure Hash Algorithm 1) – Similar to MD5, SHA-1 is also susceptible to collision attacks, making it insecure for integrity verification.
+
+B. Poorly Designed Protocols
+Some encryption protocols have inherent weaknesses that attackers can exploit.
+
+- WEP (Wired Equivalent Privacy) – Used for wireless network security, WEP has a flawed encryption method that makes it easy to crack using readily available tools.
+- SSL (Secure Sockets Layer) versions 2.0 and 3.0 – These older versions of SSL have weaknesses such as man-in-the-middle (MITM) attack vulnerabilities and weak cipher support, leading to attacks like POODLE (Padding Oracle On Downgraded Legacy Encryption).
+- PKI (Public Key Infrastructure) issues – Some public key cryptosystems rely on outdated or weak signature algorithms (e.g., RSA keys under 1024 bits), making them vulnerable to factorization attacks.
+
+C. Side-Channel Attacks
+Even if an encryption algorithm is mathematically strong, attackers can exploit the physical implementation of cryptographic operations:
+
+- Timing Attacks – Observing the time taken by a system to process cryptographic operations to deduce secret information.
+- Power Analysis Attacks – Monitoring power consumption patterns to extract cryptographic keys.
+- Electromagnetic Attacks – Analyzing electromagnetic emissions from a device to recover sensitive data.
+
+
+**2. Implementation Weaknesses**
+Even a strong encryption algorithm can be rendered useless if it is implemented incorrectly. Mistakes in software or hardware can introduce vulnerabilities that attackers exploit.
+
+A. Poor Random Number Generation
+Cryptography relies on random numbers for key generation and encryption. If a system generates predictable random numbers, attackers can guess encryption keys. Weak sources of randomness include:
+Using system time as a seed – Some implementations use the current timestamp to generate cryptographic keys, making it easier for attackers to predict.
+Non-random entropy sources – If a system reuses entropy pools or lacks sufficient randomness, the resulting cryptographic operations may be insecure.
+
+B. Hardcoded or Default Keys
+Some developers hardcode cryptographic keys into software, making them easy for attackers to find if they gain access to the source code. Similarly, default encryption keys are often known publicly, allowing unauthorized decryption.
+
+C. Flawed Key Exchange Implementations
+Even strong encryption can be broken if key exchange mechanisms are weak. Examples include:
+
+- Lack of forward secrecy – If a past encryption key is compromised, all previous encrypted communications should remain secure. Some implementations fail to ensure this, allowing attackers to decrypt past messages if they obtain a private key.
+- Man-in-the-Middle (MITM) attacks – If an encryption protocol doesn’t properly authenticate key exchanges, an attacker can intercept and modify communications. A well-known example is the Logjam attack, which exploits weak Diffie-Hellman key exchanges.
+
+D. Weak Cryptographic Storage
+Some systems store encrypted data improperly, making it vulnerable:
+Using weak or no encryption for stored passwords – Systems should store hashed and salted passwords rather than storing them in plaintext or using weak hashing algorithms.
+Reusing encryption keys for multiple purposes – Using the same key for encrypting different types of data increases the risk of exposure if the key is compromised.
+
+
+**3. Key Management Vulnerabilities**
+
+A. Weak Key Sizes
+The strength of encryption depends on the key length. If a key is too short, it can be brute-forced.
+RSA keys under 2048 bits are now considered insecure.
+AES keys under 128 bits should not be used for sensitive data.
+
+B. Poor Key Storage Practices
+Encryption keys should be stored securely, but poor practices often lead to their compromise:
+Storing keys in configuration files – Attackers who gain access to the system can easily extract encryption keys from improperly protected files.
+Leaving keys in memory too long – If an application does not securely erase cryptographic keys from memory after use, attackers can extract them via memory scraping techniques.
+
+C. Key Reuse and Expired Keys
+Reusing the same key for too long increases the likelihood of compromise. Best practices require regular key rotation to minimize risk.
+Not retiring old keys properly – Even after a key is retired, failing to properly remove it from a system can allow unauthorized decryption.
+
+D. Insecure Key Distribution
+Encryption keys need to be securely shared between parties. Common mistakes include:
+Sending encryption keys over unencrypted channels – If an encryption key is shared via email or a plaintext message, an attacker can intercept it.
+Lack of proper authentication during key exchange – If an attacker can trick a system into accepting a fraudulent key, they can decrypt sensitive data.
+
+E. Lack of a Centralized Key Management System (KMS)
+Organizations that manage multiple cryptographic keys should use a Key Management System (KMS) to enforce security policies. Without centralized control, keys may be stored improperly, leading to unauthorized access or loss.
+
+| **Category**                        | **Weakness**                       | **Description / Examples**                                                                                                     |
+| ----------------------------------- | ---------------------------------- | ------------------------------------------------------------------------------------------------------------------------------ |
+| **Algorithm & Protocol Weaknesses** | **Outdated Algorithms**            | DES (56-bit key), MD5 (collision attacks), SHA-1 (insecure integrity). These are no longer safe due to modern computing power. |
+|                                     | **Weak Protocols**                 | WEP (easily cracked), SSL 2.0/3.0 (MITM, POODLE attacks), weak PKI with short RSA keys.                                        |
+|                                     | **Side-Channel Attacks**           | Attacks like timing analysis, power monitoring, or EM radiation can reveal secret keys without breaking the algorithm.         |
+| **Implementation Weaknesses**       | **Poor Random Number Generation**  | Predictable keys if randomness is weak. E.g., using system time as seed.                                                       |
+|                                     | **Hardcoded or Default Keys**      | Developers may accidentally (or lazily) embed keys in code. These keys can be easily discovered.                               |
+|                                     | **Bad Key Exchange**               | Lacking forward secrecy or vulnerable to MITM (e.g., Logjam attack using weak Diffie-Hellman parameters).                      |
+|                                     | **Weak Cryptographic Storage**     | Storing passwords in plaintext or using the same key for different purposes weakens data security.                             |
+| **Key Management Issues**           | **Weak Key Sizes**                 | RSA keys < 2048 bits or AES < 128 bits are vulnerable to brute-force attacks.                                                  |
+|                                     | **Poor Key Storage**               | Saving keys in config files or leaving them in memory too long makes them easy targets.                                        |
+|                                     | **Key Reuse / Expired Keys**       | Using the same key too long without rotation increases risk of compromise.                                                     |
+|                                     | **Insecure Key Distribution**      | Sending keys over unencrypted emails or failing to verify identity during key exchange can expose data.                        |
+|                                     | **No Key Management System (KMS)** | Without a centralized system, organizations often misplace, mishandle, or leak encryption keys.                                |
+
+### Open Questions ###
+
+1. Why is using an outdated algorithm like MD5 or DES considered a serious risk in modern systems?
+<details>
+  <summary>Show answer</summary>
+Because these algorithms have known vulnerabilities that attackers can exploit easily, like collision attacks in MD5 or brute-forcing DES's small key space. Modern computing power makes these attacks fast and affordable.
+</details>
+
+2. What kind of real-world problems can occur if keys are hardcoded into an application?
+<details>
+  <summary>Show answer</summary>
+If attackers reverse-engineer the application, they can extract the key and decrypt sensitive data or forge messages. This is a common failure in IoT and poorly-secured mobile apps.
+</details>
+
+3. How do side-channel attacks bypass the strength of cryptographic algorithms?
+<details>
+  <summary>Show answer</summary>
+Instead of breaking the algorithm mathematically, attackers gather clues from physical signals like timing, power usage, or electromagnetic leaks to infer the key. These attacks exploit how the system behaves, not just the code.
+</details>
+
+4. What are the dangers of poor key distribution practices?
+<details>
+  <summary>Show answer</summary>
+If encryption keys are sent over unencrypted channels or shared without verifying identities (e.g., via email), they can be intercepted, leading to total compromise of encrypted data.
+</details>
+
+5. In what ways can a lack of a Key Management System (KMS) impact an organization’s security?
+<details>
+  <summary>Show answer</summary>
+Without a KMS, it's easy to lose track of keys, reuse them insecurely, or fail to revoke them after staff changes. This leads to poor accountability and increases the risk of unauthorized access or data breaches.
+</details>
