Update 3.05 Assess and mitigate the vulnerabilities of security architectures, designs and solution elements.md

--- a/DOMAIN3: Security Architecture and Engineering/3.05 Assess and mitigate the vulnerabilities of security architectures, designs and solution elements.md
+++ b/DOMAIN3: Security Architecture and Engineering/3.05 Assess and mitigate the vulnerabilities of security architectures, designs and solution elements.md
@@ -338,21 +338,21 @@ When everyone uses the same “admin” login, there’s no way to know who did 
 Cryptographic systems are essential for securing data, ensuring confidentiality, integrity, and authenticity. However, they are not foolproof. Weaknesses in cryptographic systems generally fall into three major categories: algorithm and protocol weaknesses, implementation weaknesses, and key management vulnerabilities. Each of these can be exploited by attackers if not properly managed.
 
 **1. Algorithm and Protocol Weaknesses**
-A. Outdated or Weak Algorithms
+A. Outdated or Weak Algorithms. 
 Not all encryption algorithms are secure forever. Advances in computing power, especially with quantum computing on the horizon, make some algorithms obsolete. Examples of weak or broken algorithms include:
 
 - DES (Data Encryption Standard) – Once a widely used encryption standard, DES now has a small key size (56 bits), making it vulnerable to brute-force attacks.
 - MD5 (Message Digest Algorithm 5) – This hashing algorithm is vulnerable to collision attacks, where two different inputs produce the same hash. Attackers can use this to forge digital signatures.
 - SHA-1 (Secure Hash Algorithm 1) – Similar to MD5, SHA-1 is also susceptible to collision attacks, making it insecure for integrity verification.
 
-B. Poorly Designed Protocols
+B. Poorly Designed Protocols. 
 Some encryption protocols have inherent weaknesses that attackers can exploit.
 
 - WEP (Wired Equivalent Privacy) – Used for wireless network security, WEP has a flawed encryption method that makes it easy to crack using readily available tools.
 - SSL (Secure Sockets Layer) versions 2.0 and 3.0 – These older versions of SSL have weaknesses such as man-in-the-middle (MITM) attack vulnerabilities and weak cipher support, leading to attacks like POODLE (Padding Oracle On Downgraded Legacy Encryption).
 - PKI (Public Key Infrastructure) issues – Some public key cryptosystems rely on outdated or weak signature algorithms (e.g., RSA keys under 1024 bits), making them vulnerable to factorization attacks.
 
-C. Side-Channel Attacks
+C. Side-Channel Attacks. 
 Even if an encryption algorithm is mathematically strong, attackers can exploit the physical implementation of cryptographic operations:
 
 - Timing Attacks – Observing the time taken by a system to process cryptographic operations to deduce secret information.
@@ -363,21 +363,21 @@ Even if an encryption algorithm is mathematically strong, attackers can exploit 
 **2. Implementation Weaknesses**
 Even a strong encryption algorithm can be rendered useless if it is implemented incorrectly. Mistakes in software or hardware can introduce vulnerabilities that attackers exploit.
 
-A. Poor Random Number Generation
+A. Poor Random Number Generation. 
 Cryptography relies on random numbers for key generation and encryption. If a system generates predictable random numbers, attackers can guess encryption keys. Weak sources of randomness include:
 Using system time as a seed – Some implementations use the current timestamp to generate cryptographic keys, making it easier for attackers to predict.
 Non-random entropy sources – If a system reuses entropy pools or lacks sufficient randomness, the resulting cryptographic operations may be insecure.
 
-B. Hardcoded or Default Keys
+B. Hardcoded or Default Keys. 
 Some developers hardcode cryptographic keys into software, making them easy for attackers to find if they gain access to the source code. Similarly, default encryption keys are often known publicly, allowing unauthorized decryption.
 
-C. Flawed Key Exchange Implementations
+C. Flawed Key Exchange Implementations. 
 Even strong encryption can be broken if key exchange mechanisms are weak. Examples include:
 
 - Lack of forward secrecy – If a past encryption key is compromised, all previous encrypted communications should remain secure. Some implementations fail to ensure this, allowing attackers to decrypt past messages if they obtain a private key.
 - Man-in-the-Middle (MITM) attacks – If an encryption protocol doesn’t properly authenticate key exchanges, an attacker can intercept and modify communications. A well-known example is the Logjam attack, which exploits weak Diffie-Hellman key exchanges.
 
-D. Weak Cryptographic Storage
+D. Weak Cryptographic Storage. 
 Some systems store encrypted data improperly, making it vulnerable:
 Using weak or no encryption for stored passwords – Systems should store hashed and salted passwords rather than storing them in plaintext or using weak hashing algorithms.
 Reusing encryption keys for multiple purposes – Using the same key for encrypting different types of data increases the risk of exposure if the key is compromised.
@@ -385,26 +385,26 @@ Reusing encryption keys for multiple purposes – Using the same key for encrypt
 
 **3. Key Management Vulnerabilities**
 
-A. Weak Key Sizes
+A. Weak Key Sizes. 
 The strength of encryption depends on the key length. If a key is too short, it can be brute-forced.
 RSA keys under 2048 bits are now considered insecure.
 AES keys under 128 bits should not be used for sensitive data.
 
-B. Poor Key Storage Practices
+B. Poor Key Storage Practices. 
 Encryption keys should be stored securely, but poor practices often lead to their compromise:
 Storing keys in configuration files – Attackers who gain access to the system can easily extract encryption keys from improperly protected files.
 Leaving keys in memory too long – If an application does not securely erase cryptographic keys from memory after use, attackers can extract them via memory scraping techniques.
 
-C. Key Reuse and Expired Keys
+C. Key Reuse and Expired Keys. 
 Reusing the same key for too long increases the likelihood of compromise. Best practices require regular key rotation to minimize risk.
 Not retiring old keys properly – Even after a key is retired, failing to properly remove it from a system can allow unauthorized decryption.
 
-D. Insecure Key Distribution
+D. Insecure Key Distribution. 
 Encryption keys need to be securely shared between parties. Common mistakes include:
 Sending encryption keys over unencrypted channels – If an encryption key is shared via email or a plaintext message, an attacker can intercept it.
 Lack of proper authentication during key exchange – If an attacker can trick a system into accepting a fraudulent key, they can decrypt sensitive data.
 
-E. Lack of a Centralized Key Management System (KMS)
+E. Lack of a Centralized Key Management System (KMS). 
 Organizations that manage multiple cryptographic keys should use a Key Management System (KMS) to enforce security policies. Without centralized control, keys may be stored improperly, leading to unauthorized access or loss.
 
 | **Category**                        | **Weakness**                       | **Description / Examples**                                                                                                     |
@@ -453,3 +453,60 @@ If encryption keys are sent over unencrypted channels or shared without verifyin
   <summary>Show answer</summary>
 Without a KMS, it's easy to lose track of keys, reuse them insecurely, or fail to revoke them after staff changes. This leads to poor accountability and increases the risk of unauthorized access or data breaches.
 </details>
+
+## 3.5.5 Operational Technology/Industrial Control System ##
+
+**Operational Technology (OT)** refers to the hardware and software used to monitor and control physical processes in industries such as manufacturing, energy, transportation, and utilities. Unlike traditional IT systems, which handle data and communication, OT systems directly control machinery, industrial equipment, and critical infrastructure.
+
+**Industrial Control Systems (ICS)** are a key component of OT. These systems manage and automate processes in industrial environments. ICS includes various technologies, such as Programmable Logic Controllers (PLCs), Distributed Control Systems (DCS), and Supervisory Control and Data Acquisition (SCADA) systems. Each of these plays a specific role in managing industrial operations. Key Components of ICS ARE:
+
+**Programmable Logic Controllers (PLCs)**
+
+These are small, specialized computers used to control industrial equipment.
+They operate in real-time, making decisions based on sensor inputs.
+PLCs are used in manufacturing lines, power plants, and water treatment facilities.
+
+- Distributed Control Systems (DCS)
+
+A DCS is a network of interconnected controllers that manage complex industrial processes.
+It is commonly used in large-scale environments like oil refineries and chemical plants.
+Unlike SCADA, which operates over long distances, DCS is focused on local process automation.
+
+- Supervisory Control and Data Acquisition (SCADA)
+
+SCADA systems collect and analyze data from industrial equipment, allowing operators to monitor and control systems remotely.
+They are used in power grids, water supply systems, and transportation networks.
+SCADA enables centralized control over geographically dispersed assets.
+
+:bulb: Segment the ICS network with firewalls and VLANs, allowing only necessary traffic from authorized devices. Use allowlisting to restrict access and disable unused ports to reduce attack risks.
+
+OT and ICS systems were traditionally designed to operate in isolated environments, making security a lower priority. However, as these systems become more interconnected with IT networks and the internet, they are increasingly exposed to cybersecurity threats included:
+
+1. Legacy Systems and Lack of Security by Design
+Many ICS components were designed decades ago with little consideration for cybersecurity.
+Older PLCs, DCS, and SCADA systems often lack security features like encryption and authentication.
+Patching and updating ICS systems is difficult because they run 24/7 and cannot be taken offline easily.
+2. Poor Network Segmentation
+Insecure ICS networks are often directly connected to IT networks, allowing attackers to move laterally from IT systems to OT systems.
+Many organizations do not properly isolate critical industrial networks from corporate or external networks.
+3. Unprotected Remote Access
+Many ICS environments allow remote access for maintenance and monitoring.
+If access is not secured (e.g., weak passwords, lack of multi-factor authentication), attackers can gain control over critical systems.
+Unprotected SCADA interfaces can be exposed to the internet, allowing unauthorized access.
+4. Lack of Encryption and Authentication
+Many ICS protocols (e.g., Modbus, DNP3) were designed for efficiency, not security, and do not include encryption or authentication mechanisms.
+Attackers can intercept and manipulate communications between controllers and sensors.
+5. Insider Threats and Human Error
+Employees, contractors, or vendors with access to ICS systems can intentionally or accidentally cause security incidents.
+Poor security awareness among OT personnel increases the risk of social engineering attacks.
+6. Malware and Ransomware Attacks
+ICS systems can be targeted by malware specifically designed to disrupt industrial operations.
+Stuxnet is a well-known example of malware that targeted PLCs to physically damage centrifuges in an Iranian nuclear facility.
+Ransomware attacks on OT environments can cause massive downtime and financial losses.
+7. Supply Chain Vulnerabilities
+ICS components are often sourced from third-party vendors, and vulnerabilities in the supply chain can introduce security risks.
+Malicious firmware updates or compromised hardware components can be used to exploit ICS systems.
+8. Denial-of-Service (DoS) Attacks
+Attackers can overwhelm ICS networks with traffic, disrupting communication between control systems and industrial equipment.
+Even a small disruption in critical infrastructure (e.g., power grids or water treatment plants) can have significant consequences.
+
