Update 3.05 Assess and mitigate the vulnerabilities of security architectures, designs and solution elements.md

--- a/DOMAIN3: Security Architecture and Engineering/3.05 Assess and mitigate the vulnerabilities of security architectures, designs and solution elements.md
+++ b/DOMAIN3: Security Architecture and Engineering/3.05 Assess and mitigate the vulnerabilities of security architectures, designs and solution elements.md
@@ -466,47 +466,73 @@ These are small, specialized computers used to control industrial equipment.
 They operate in real-time, making decisions based on sensor inputs.
 PLCs are used in manufacturing lines, power plants, and water treatment facilities.
 
-- Distributed Control Systems (DCS)
-
-A DCS is a network of interconnected controllers that manage complex industrial processes.
-It is commonly used in large-scale environments like oil refineries and chemical plants.
+- Distributed Control Systems (DCS). A DCS is a network of interconnected controllers that manage complex industrial processes. It is commonly used in large-scale environments like oil refineries and chemical plants.
 Unlike SCADA, which operates over long distances, DCS is focused on local process automation.
 
-- Supervisory Control and Data Acquisition (SCADA)
-
-SCADA systems collect and analyze data from industrial equipment, allowing operators to monitor and control systems remotely.
-They are used in power grids, water supply systems, and transportation networks.
-SCADA enables centralized control over geographically dispersed assets.
+- Supervisory Control and Data Acquisition (SCADA). SCADA systems collect and analyze data from industrial equipment, allowing operators to monitor and control systems remotely. They are used in power grids, water supply systems, and transportation networks. SCADA enables centralized control over geographically dispersed assets.
 
 :bulb: Segment the ICS network with firewalls and VLANs, allowing only necessary traffic from authorized devices. Use allowlisting to restrict access and disable unused ports to reduce attack risks.
 
 OT and ICS systems were traditionally designed to operate in isolated environments, making security a lower priority. However, as these systems become more interconnected with IT networks and the internet, they are increasingly exposed to cybersecurity threats included:
 
-1. Legacy Systems and Lack of Security by Design
+1. Legacy Systems and Lack of Security by Design.
 Many ICS components were designed decades ago with little consideration for cybersecurity.
 Older PLCs, DCS, and SCADA systems often lack security features like encryption and authentication.
 Patching and updating ICS systems is difficult because they run 24/7 and cannot be taken offline easily.
-2. Poor Network Segmentation
+2. Poor Network Segmentation.
 Insecure ICS networks are often directly connected to IT networks, allowing attackers to move laterally from IT systems to OT systems.
 Many organizations do not properly isolate critical industrial networks from corporate or external networks.
-3. Unprotected Remote Access
+3. Unprotected Remote Access.
 Many ICS environments allow remote access for maintenance and monitoring.
 If access is not secured (e.g., weak passwords, lack of multi-factor authentication), attackers can gain control over critical systems.
 Unprotected SCADA interfaces can be exposed to the internet, allowing unauthorized access.
-4. Lack of Encryption and Authentication
+4. Lack of Encryption and Authentication.
 Many ICS protocols (e.g., Modbus, DNP3) were designed for efficiency, not security, and do not include encryption or authentication mechanisms.
 Attackers can intercept and manipulate communications between controllers and sensors.
-5. Insider Threats and Human Error
+5. Insider Threats and Human Error.
 Employees, contractors, or vendors with access to ICS systems can intentionally or accidentally cause security incidents.
 Poor security awareness among OT personnel increases the risk of social engineering attacks.
-6. Malware and Ransomware Attacks
+6. Malware and Ransomware Attacks.
 ICS systems can be targeted by malware specifically designed to disrupt industrial operations.
 Stuxnet is a well-known example of malware that targeted PLCs to physically damage centrifuges in an Iranian nuclear facility.
 Ransomware attacks on OT environments can cause massive downtime and financial losses.
-7. Supply Chain Vulnerabilities
+7. Supply Chain Vulnerabilities.
 ICS components are often sourced from third-party vendors, and vulnerabilities in the supply chain can introduce security risks.
 Malicious firmware updates or compromised hardware components can be used to exploit ICS systems.
-8. Denial-of-Service (DoS) Attacks
+8. Denial-of-Service (DoS) Attacks.
 Attackers can overwhelm ICS networks with traffic, disrupting communication between control systems and industrial equipment.
 Even a small disruption in critical infrastructure (e.g., power grids or water treatment plants) can have significant consequences.
 
+### Open Questions ###
+
+1. What is the main functional difference between a SCADA system and a Distributed Control System (DCS)?
+<details>
+  <summary>Show answer</summary>
+SCADA systems are designed for remote monitoring and control over large geographic areas (e.g., power grids), while DCS is focused on local automation in centralized environments like refineries and chemical plants.
+</details>
+
+2. Why are legacy ICS components, such as older PLCs and DCS systems, a security concern in modern environments?
+<details>
+  <summary>Show answer</summary>
+Because they were originally designed without cybersecurity in mind. Many lack encryption, authentication, and patching mechanisms, making them vulnerable to modern attacks even though they still perform critical functions.
+</details>
+
+3. How can poor network segmentation increase the risk of a successful ICS attack?
+<details>
+  <summary>Show answer</summary>
+If ICS networks are not properly segmented from IT networks, attackers can gain access to operational systems by first breaching the corporate network, then moving laterally into sensitive OT environments.
+</details>
+
+4. What makes remote access a common attack vector in ICS environments, and how can it be secured?
+<details>
+  <summary>Show answer</summary>
+Remote access is often enabled for maintenance, but without strong authentication (like MFA) or network controls, it provides a direct path for attackers. Securing it involves VPNs, MFA, strong passwords, and logging access attempts.
+</details>
+
+5. What was Stuxnet, and why is it considered a milestone in ICS cybersecurity?
+<details>
+  <summary>Show answer</summary>
+Stuxnet was a malware that specifically targeted PLCs used in Iranian nuclear facilities, causing physical damage to centrifuges. It demonstrated how cyberattacks could cause real-world destruction in industrial systems.
+</details>
+handled in a consistent and controlled way, reducing the risk of accidental or malicious corruption. This model is widely used in systems that require high data integrity, like financial applications.
+</details>
