Update 3.05 Assess and mitigate the vulnerabilities of security architectures, designs and solution elements.md

--- a/DOMAIN3: Security Architecture and Engineering/3.05 Assess and mitigate the vulnerabilities of security architectures, designs and solution elements.md
+++ b/DOMAIN3: Security Architecture and Engineering/3.05 Assess and mitigate the vulnerabilities of security architectures, designs and solution elements.md
@@ -460,9 +460,7 @@ Without a KMS, it's easy to lose track of keys, reuse them insecurely, or fail t
 
 **Industrial Control Systems (ICS)** are a key component of OT. These systems manage and automate processes in industrial environments. ICS includes various technologies, such as Programmable Logic Controllers (PLCs), Distributed Control Systems (DCS), and Supervisory Control and Data Acquisition (SCADA) systems. Each of these plays a specific role in managing industrial operations. Key Components of ICS ARE:
 
-**Programmable Logic Controllers (PLCs)**
-
-These are small, specialized computers used to control industrial equipment.
+- Programmable Logic Controllers (PLCs). These are small, specialized computers used to control industrial equipment.
 They operate in real-time, making decisions based on sensor inputs.
 PLCs are used in manufacturing lines, power plants, and water treatment facilities.
 
@@ -536,3 +534,60 @@ Stuxnet was a malware that specifically targeted PLCs used in Iranian nuclear fa
 </details>
 handled in a consistent and controlled way, reducing the risk of accidental or malicious corruption. This model is widely used in systems that require high data integrity, like financial applications.
 </details>
+
+## 3.5.6 Cloud-based systems (e.g., Software as a Service (SaaS), Infrastructure as a Service (IaaS), Platform as a Service (PaaS)) ##
+
+Cloud computing services are commonly delivered in three models, each providing different levels of abstraction, management, and control.
+
+**1 Software as a Service (SaaS)**
+
+SaaS refers to cloud-based software that users can access through the internet. Rather than purchasing and installing software on their own devices, users can subscribe to an application hosted in the cloud.
+
+Characteristics:
+
+- Access via Web Browser: SaaS applications are typically accessed through a browser, allowing users to access the application from any device with an internet connection.
+
+- Fully Managed: The cloud service provider handles all aspects of the software, including maintenance, updates, and security patches.
+
+- Subscription Model: SaaS operates on a subscription basis, where users pay for access to the software, often with tiered pricing based on features or usage.
+
+Examples of SaaS:
+
+- Google Workspace (formerly G Suite)
+- Microsoft 365
+- Salesforce
+
+Vulnerabilities:
+
+- Data Privacy and Compliance Risks: Data stored in the cloud may be subject to various jurisdictional regulations. Organizations must ensure that their cloud provider is compliant with data privacy laws such as GDPR, HIPAA, or CCPA.
+- Limited Control: Since the service is managed by the provider, customers have limited control over updates, security features, and performance, which could result in disruptions or vulnerabilities.
+- Multi-Tenancy Risk: In a shared environment, vulnerabilities in one client’s data or configurations can affect others. Although providers implement security measures, the risk of cross-tenant attacks exists.
+
+**2 Infrastructure as a Service (IaaS)**
+IaaS provides the underlying hardware infrastructure to run applications and services. Users are responsible for managing the operating system, applications, and data while the provider maintains the physical infrastructure.
+Characteristics:
+Virtualized Resources: Users can rent virtualized computing resources such as virtual machines (VMs), storage, and networking components.
+Scalability and Flexibility: IaaS allows users to scale resources up or down based on demand, providing flexibility for dynamic workloads.
+Pay-as-you-go: The user only pays for the resources they use, which helps reduce operational costs.
+Examples of IaaS:
+Amazon Web Services (AWS)
+Microsoft Azure
+Google Cloud Platform (GCP)
+Vulnerabilities:
+Shared Resources: Since IaaS environments are often multi-tenant, there is a risk of data leakage or side-channel attacks from neighboring tenants if proper isolation measures are not in place.
+Insider Threats: Providers may have access to customer data and systems, creating potential risks if their staff is compromised or malicious.
+Misconfigurations: Improper configuration of virtual machines or cloud networking can lead to vulnerabilities such as open ports, improper access control, and exposed sensitive data.
+3 Platform as a Service (PaaS)
+PaaS provides a platform that allows customers to develop, run, and manage applications without worrying about the underlying infrastructure. It abstracts much of the complexity involved in infrastructure management and offers tools for developers.
+Characteristics:
+Integrated Development Environment (IDE): PaaS often comes with a pre-configured development environment, which simplifies coding and deployment.
+Middleware and Databases: In addition to basic compute resources, PaaS typically includes middleware, databases, and other software components that developers can leverage.
+Developer-Focused: PaaS is designed to streamline the application development lifecycle, from coding to deployment.
+Examples of PaaS:
+Google App Engine
+Heroku
+Microsoft Azure App Service
+Vulnerabilities:
+Code Injection: PaaS platforms host applications written by users, making them vulnerable to code injection attacks if the application code is not properly secured.
+Data Leakage: The developer may inadvertently expose sensitive data or credentials if security best practices are not followed.
+Shared Infrastructure Risks: Similar to IaaS, PaaS environments may use shared infrastructure, which can lead to risks if tenants do not adequately isolate their applications.
